--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
   text-align: center;
   margin-bottom: 50px;
 }
+
+.card-wrapper {
+  width: 902px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
+}
